Test admin manager setup Sign-up role label removed User -> default for registration (admin give roles)

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -204,7 +204,7 @@ manager.table.header=All Vouchers
 # Admin Panel
 admin.title=Admin Panel
 admin.header=Admin Voucher Management
-admin.subheader=Same tools as Manager
+admin.subheader=Admin
 admin.table.header=All Vouchers
 
 
