--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -82,7 +82,7 @@ manager.table.header=Усі ваучери
 # Панель адміністратора
 admin.title=Панель адміна
 admin.header=Керування ваучерами (Admin)
-admin.subheader=Ті самі інструменти, що у менеджера
+admin.subheader=Адмін
 admin.table.header=Усі ваучери
 admin.users.header=Керування користувачами
 admin.users.username=Логін
