Admin can edit old vouchers + create translations

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -200,13 +200,21 @@ manager.title=Manager Panel
 manager.header=Voucher Management Panel
 manager.subheader=Modify voucher labels and promotions
 manager.table.header=All Vouchers
+tourType.EXCURSION=Excursion
+
+transferType.CAR=Car
+hotelType.STANDARD=Standard
+hotelType.LUXURY=Luxury
+voucher.status.ACTIVE=Active
+voucher.status.INACTIVE=Inactive
+voucher.status.SOLD_OUT=Sold Out
+
 
 # Admin Panel
 admin.title=Admin Panel
 admin.header=Admin Voucher Management
 admin.subheader=Admin
 admin.table.header=All Vouchers
-
 
 # Admin – User Management
 admin.users.header=User Management
@@ -220,5 +228,27 @@ admin.users.active=Active
 admin.users.actions=Actions
 admin.users.changeRole=Change
 admin.users.changeRoleHeader=Change Role
-
+admin.voucher.edit.title=Edit Voucher
+admin.voucher.edit.header=Edit Voucher
+admin.voucher.create.title=Create Voucher
+admin.voucher.create.header=Create Voucher
+button.save=Save
+voucher.tourType.BEACH=Beach
+voucher.tourType.MOUNTAINS=Mountains
+voucher.transferType.BUS=Bus
+voucher.transferType.PLANE=Plane
+voucher.hotelType.STANDARD=Standard
+voucher.hotelType.DELUXE=Deluxe
+button.createVoucher=Create Voucher
+voucher.description=Description
+currency.usd=USD
+voucher.tourType=Tour Type
+voucher.transferType=Transfer Type
+voucher.hotelType=Hotel Type
+voucher.label=Label
+button.edit=Edit
+button.delete=Delete
 button.updateRole=Update Role
+status.REGISTERED=Registered
+status.PAID=Paid
+status.CANCELED=Canceled
