--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -135,7 +135,7 @@ voucher.filter.maxPrice=Максимальна ціна
 voucher.filter.hotelType=Тип готелю
 voucher.filter.all=Усі
 voucher.filter.button=Фільтрувати
-
+date.format=uk=dd.MM.yyyy
 # Профіль
 profile.title=Мій профіль
 profile.header=Мій профіль
@@ -155,7 +155,7 @@ profile.lastName=Прізвище
 profile.topup.header=Поповнити баланс
 profile.topup.placeholder=Введіть суму
 profile.topup.button=Поповнити
-
+currency.usd=USD
 # Замовлення
 profile.orders.header=Мої замовлення
 profile.orders.id=ID замовлення
@@ -173,7 +173,8 @@ order.status.confirmed=Підтверджено
 order.status.canceled=Скасовано
 order.totalPrice=Загальна сума
 order.payment=Оплата
-
+button.edit=Редагувати
+button.delete=Видалити
 # Валідація та форма
 username.label=Логін
 email.label=Електронна пошта
@@ -186,6 +187,20 @@ role.admin=Адміністратор
 phonenumber.label=Номер телефону
 phone.required=Номер телефону є обов’язковим.
 phone.invalid=Невірний формат номеру телефону.
+tourType.EXCURSION=Екскурсія
+transferType.CAR=Автомобіль
+hotelType.STANDARD=Стандарт
+hotelType.LUXURY=Лакшері
+voucher.status.ACTIVE=Active
+voucher.status.INACTIVE=Неактивно
+voucher.status.SOLD_OUT=Розпродано
+voucher.description=Опис
+voucher.tourType=Тип туру
+voucher.transferType=Тип трансферу
+voucher.hotelType=Тип готелю
+button.save=Save
+admin.voucher.edit.title=Редагувати ваучер
+admin.voucher.edit.header=Редагувати ваучер
 
 # Бізнес-валидація
 username.exists=Логін вже зайнятий.
@@ -197,6 +212,10 @@ phone.exists=Номер телефону вже використовується
 role.USER=Користувач
 role.MANAGER=Менеджер
 role.ADMIN=Адмін
+
+status.REGISTERED=Зареєстровано
+status.PAID=Оплачено
+status.CANCELED=Скасовано
 
 # Сторінки помилок
 error.404.title=Сторінку не знайдено
