Admin can create vouchers

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,4 +1,6 @@
+# ====================================
 # Index / Home
+# ====================================
 index.nav.brand=Travel Agency
 index.nav.home=Home
 home.title=Travel Agency Beyond the Horizon!
@@ -7,7 +9,9 @@ home.nav.home=Home
 home.header=Welcome to Our Travel Agency Beyond the Horizon!
 home.description=Explore incredible journeys and start your adventure today.
 
+# ====================================
 # Dashboard
+# ====================================
 dashboard.title=Travel Agency
 dashboard.header=Travel Agency
 dashboard.nav.brand=Travel Agency
@@ -15,7 +19,9 @@ dashboard.nav.manager=Manager Panel
 dashboard.nav.admin=Admin Panel
 dashboard.home=Dashboard
 
+# ====================================
 # Buttons
+# ====================================
 button.signin=Sign In
 button.signup=Sign Up
 button.profile=My Profile
@@ -42,14 +48,23 @@ button.register=Register
 button.home=Home
 button.updateProfile=Update Profile
 button.topup=Top Up
+button.save=Save
+button.edit=Edit
+button.delete=Delete
+button.createVoucher=Create Voucher
+button.updateRole=Update Role
 
+# ====================================
 # Auth Titles
+# ====================================
 sign.in.title=Sign In
 sign.in.header=Sign In
 sign.up.title=Sign Up
 sign.up.header=Sign Up
 
-# Form labels & validation
+# ====================================
+# Form Labels & Validation
+# ====================================
 username.label=Username
 email.label=Email
 password.label=Password
@@ -58,7 +73,9 @@ phonenumber.label=Phone Number
 phone.required=Phone number is required.
 phone.invalid=Invalid phone number format.
 
-# Role labels
+# ====================================
+# Role Labels
+# ====================================
 role.label=Role
 role.user=User
 role.manager=Manager
@@ -67,13 +84,17 @@ role.USER=User
 role.MANAGER=Manager
 role.ADMIN=Admin
 
-# Business errors
+# ====================================
+# Business Errors
+# ====================================
 username.exists=Username is already taken.
 email.exists=Email is already registered.
 password.mismatch=Passwords do not match.
 phone.exists=Phone number is already in use.
 
-# Error pages
+# ====================================
+# Error Pages
+# ====================================
 error.404.title=Page Not Found
 error.404.message=Sorry, the page you are looking for does not exist.
 error.403.title=Access Denied
@@ -84,11 +105,15 @@ error.default.title=Error
 error.default.message=An unexpected error occurred. Please try again later.
 error.default.backHome=Back to Home
 
+# ====================================
 # Voucher Catalog
+# ====================================
 voucher.catalog.header=Available Vouchers
 voucher.catalog.empty=No vouchers available at the moment.
 
+# ====================================
 # Voucher Filter Form
+# ====================================
 voucher.filter.header=Filter Vouchers
 voucher.filter.tourType=Tour Type
 voucher.filter.transferType=Transfer Type
@@ -98,36 +123,51 @@ voucher.filter.hotelType=Hotel Type
 voucher.filter.all=All
 voucher.filter.button=Filter
 
+# ====================================
 # Voucher Labels
+# ====================================
 voucher.label.hotel=Hotel:
 voucher.label.transfer=Transfer:
 voucher.label.tour=Tour:
+voucher.label=Label
 voucher.hot.badge=Hot
 voucher.arrival=Arrival:
 voucher.eviction=Eviction:
 
+# ====================================
 # Voucher Table
+# ====================================
 voucher.table.id=ID
 voucher.table.title=Voucher Title
 voucher.table.description=Description
 voucher.table.action=Action
 voucher.title=Title
+voucher.description=Description
 voucher.price=Price
 voucher.date=Dates
 voucher.status=Status
 voucher.hot=HOT
 voucher.actions=Actions
 
+# ====================================
 # Voucher Status Values
+# ====================================
 voucher.status.REGISTERED=Registered
 voucher.status.PAID=Paid
 voucher.status.CANCELED=Canceled
+voucher.status.ACTIVE=Active
+voucher.status.INACTIVE=Inactive
+voucher.status.SOLD_OUT=Sold Out
 
+# ====================================
 # Voucher Sample Block
+# ====================================
 voucher.sample.title=Featured Voucher
 voucher.sample.description=Discover exclusive offers and unique experiences.
 
+# ====================================
 # Tour Types
+# ====================================
 tourType.HEALTH=Health
 tourType.SPORTS=Sports
 tourType.LEISURE=Leisure
@@ -136,8 +176,14 @@ tourType.WINE=Wine
 tourType.ECO=Eco
 tourType.ADVENTURE=Adventure
 tourType.CULTURAL=Cultural
+tourType.EXCURSION=Excursion
+voucher.tourType.BEACH=Beach
+voucher.tourType.MOUNTAINS=Mountains
+voucher.tourType=Tour Type
 
+# ====================================
 # Transfer Types
+# ====================================
 transferType.BUS=Bus
 transferType.TRAIN=Train
 transferType.PLANE=Plane
@@ -146,15 +192,28 @@ transferType.PRIVATE_CAR=Private Car
 transferType.JEEPS=Jeep
 transferType.MINIBUS=Minibus
 transferType.ELECTRICAL_CARS=Electrical Cars
+transferType.CAR=Car
+voucher.transferType.BUS=Bus
+voucher.transferType.PLANE=Plane
+voucher.transferType=Transfer Type
 
+# ====================================
 # Hotel Types
+# ====================================
 hotelType.ONE_STAR=One Star
 hotelType.TWO_STARS=Two Stars
 hotelType.THREE_STARS=Three Stars
 hotelType.FOUR_STARS=Four Stars
 hotelType.FIVE_STARS=Five Stars
+hotelType.STANDARD=Standard
+hotelType.LUXURY=Luxury
+voucher.hotelType.STANDARD=Standard
+voucher.hotelType.DELUXE=Deluxe
+voucher.hotelType=Hotel Type
 
+# ====================================
 # Profile Page
+# ====================================
 profile.title=My profile
 profile.header=My profile
 profile.username=Username
@@ -171,11 +230,15 @@ profile.edit.header=Edit Your Details
 profile.firstName=First Name
 profile.lastName=Last Name
 
+# ====================================
 # Balance Top-up
+# ====================================
 profile.topup.header=Top Up Balance
 profile.topup.placeholder=Enter amount
 
-# Orders section
+# ====================================
+# Orders Section
+# ====================================
 profile.orders.header=My Orders
 profile.orders.id=Order ID
 profile.orders.voucherTitle=Voucher
@@ -185,7 +248,9 @@ profile.orders.total=Total Price
 profile.orders.insufficient=Insufficient funds
 profile.orders.canceled=Canceled
 
+# ====================================
 # Order Table Columns
+# ====================================
 order.voucher=Voucher
 order.date=Date
 order.status=Status
@@ -195,28 +260,25 @@ order.status.canceled=Canceled
 order.totalPrice=Total Price
 order.payment=Payment
 
+# ====================================
 # Manager Panel
+# ====================================
 manager.title=Manager Panel
 manager.header=Voucher Management Panel
 manager.subheader=Modify voucher labels and promotions
 manager.table.header=All Vouchers
-tourType.EXCURSION=Excursion
 
-transferType.CAR=Car
-hotelType.STANDARD=Standard
-hotelType.LUXURY=Luxury
-voucher.status.ACTIVE=Active
-voucher.status.INACTIVE=Inactive
-voucher.status.SOLD_OUT=Sold Out
-
-
+# ====================================
 # Admin Panel
+# ====================================
 admin.title=Admin Panel
 admin.header=Admin Voucher Management
 admin.subheader=Admin
 admin.table.header=All Vouchers
 
+# ====================================
 # Admin – User Management
+# ====================================
 admin.users.header=User Management
 admin.users.username=Username
 admin.users.roles=Roles
@@ -228,27 +290,23 @@ admin.users.active=Active
 admin.users.actions=Actions
 admin.users.changeRole=Change
 admin.users.changeRoleHeader=Change Role
+
+# ====================================
+# Admin – Voucher Edit/Create
+# ====================================
 admin.voucher.edit.title=Edit Voucher
 admin.voucher.edit.header=Edit Voucher
 admin.voucher.create.title=Create Voucher
 admin.voucher.create.header=Create Voucher
-button.save=Save
-voucher.tourType.BEACH=Beach
-voucher.tourType.MOUNTAINS=Mountains
-voucher.transferType.BUS=Bus
-voucher.transferType.PLANE=Plane
-voucher.hotelType.STANDARD=Standard
-voucher.hotelType.DELUXE=Deluxe
-button.createVoucher=Create Voucher
-voucher.description=Description
+
+# ====================================
+# Currency
+# ====================================
 currency.usd=USD
-voucher.tourType=Tour Type
-voucher.transferType=Transfer Type
-voucher.hotelType=Hotel Type
-voucher.label=Label
-button.edit=Edit
-button.delete=Delete
-button.updateRole=Update Role
+
+# ====================================
+# Global Status (fallback keys)
+# ====================================
 status.REGISTERED=Registered
 status.PAID=Paid
 status.CANCELED=Canceled
