--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -1,4 +1,6 @@
-# Головна сторінка
+# ====================================
+# Головна сторінка / Home Page
+# ====================================
 index.nav.brand=Тревел Агенція
 index.nav.home=Головна
 home.title=Тревел Агенція Світ за горизонтом!
@@ -7,7 +9,9 @@ home.nav.home=Головна
 home.header=Вітаємо у нашій Тревел Агенції Світ за горизонтом!
 home.description=Відкрийте для себе неймовірні подорожі та розпочніть свою пригоду сьогодні.
 
-# Панель керування
+# ====================================
+# Панель керування / Dashboard
+# ====================================
 dashboard.title=Тревел Агенція
 dashboard.header=Панель керування
 dashboard.nav.brand=Панель керування
@@ -15,11 +19,9 @@ dashboard.nav.manager=Панель менеджера
 dashboard.nav.admin=Панель адміна
 dashboard.home=Головна
 
-# Кнопки
-sign.in.title=Авторизація
-sign.in.header=Авторизація
-sign.up.title=Реєстрація
-sign.up.header=Реєстрація
+# ====================================
+# Кнопки / Buttons
+# ====================================
 button.signin=Увійти
 button.signup=Зареєструватися
 button.profile=Мій профіль
@@ -45,8 +47,66 @@ button.home=Головна
 button.pay=Оплатити
 button.cancel=Скасувати
 button.updateProfile=Зберегти зміни
+button.save=Зберегти
+button.edit=Редагувати
+button.delete=Видалити
+button.updateRole=Змінити роль
+button.createVoucher=Створити ваучер
 
-# Каталог ваучерів
+# ====================================
+# Авторизація / Authentication
+# ====================================
+sign.in.title=Авторизація
+sign.in.header=Авторизація
+sign.up.title=Реєстрація
+sign.up.header=Реєстрація
+
+# ====================================
+# Валідація та форма / Form Labels & Validation
+# ====================================
+username.label=Логін
+email.label=Електронна пошта
+password.label=Пароль
+password.confirm.label=Підтвердіть пароль
+phonenumber.label=Номер телефону
+phone.required=Номер телефону є обов’язковим.
+phone.invalid=Невірний формат номеру телефону.
+
+# ====================================
+# Ролі / Roles
+# ====================================
+role.label=Роль
+role.user=Користувач
+role.manager=Менеджер
+role.admin=Адміністратор
+role.USER=Користувач
+role.MANAGER=Менеджер
+role.ADMIN=Адмін
+
+# ====================================
+# Бізнес-валидація / Business Errors
+# ====================================
+username.exists=Логін вже зайнятий.
+email.exists=Електронна пошта вже використовується.
+password.mismatch=Паролі не співпадають.
+phone.exists=Номер телефону вже використовується.
+
+# ====================================
+# Сторінки помилок / Error Pages
+# ====================================
+error.404.title=Сторінку не знайдено
+error.404.message=На жаль, запитана сторінка не існує або була переміщена.
+error.403.title=Доступ заборонено
+error.403.message=У вас немає дозволу для перегляду цієї сторінки.
+error.500.title=Внутрішня помилка сервера
+error.500.message=Щось пішло не так на нашому сервері.
+error.default.title=Помилка
+error.default.message=Сталася несподівана помилка. Будь ласка, спробуйте пізніше.
+error.default.backHome=Повернутись на головну
+
+# ====================================
+# Каталог ваучерів / Voucher Catalog
+# ====================================
 voucher.catalog.header=Доступні Ваучери
 voucher.catalog.empty=Наразі ваучери відсутні.
 voucher.sample.title=Рекомендований ваучер
@@ -58,7 +118,9 @@ voucher.label.hotel=Готель:
 voucher.label.transfer=Трансфер:
 voucher.label.tour=Тур:
 
-# Таблиця ваучерів
+# ====================================
+# Таблиця ваучерів / Voucher Table
+# ====================================
 voucher.table.id=ID
 voucher.table.title=Назва ваучера
 voucher.table.description=Опис
@@ -69,37 +131,20 @@ voucher.date=Дати
 voucher.status=Статус
 voucher.hot=Гаряче
 voucher.actions=Дії
+
+# ====================================
+# Статуси ваучерів / Voucher Status
+# ====================================
 voucher.status.REGISTERED=Зареєстровано
 voucher.status.PAID=Оплачено
 voucher.status.CANCELED=Скасовано
+voucher.status.ACTIVE=Активно
+voucher.status.INACTIVE=Неактивно
+voucher.status.SOLD_OUT=Розпродано
 
-# Панель менеджера
-manager.title=Панель менеджера
-manager.header=Панель керування ваучерами
-manager.subheader=Змінюйте статус та акційні мітки ваучерів
-manager.table.header=Усі ваучери
-
-# Панель адміністратора
-admin.title=Панель адміна
-admin.header=Керування ваучерами (Admin)
-admin.subheader=Адмін
-admin.table.header=Усі ваучери
-admin.users.header=Керування користувачами
-admin.users.username=Логін
-admin.users.roles=Ролі
-admin.users.status=Статус
-admin.users.block=Заблокувати
-admin.users.unblock=Розблокувати
-admin.users.blocked=Заблоковано
-admin.users.active=Активний
-admin.users.actions=Дії
-admin.users.changeRole=Змінити
-admin.users.changeRoleHeader=Змінити роль
-
-button.updateRole=Змінити роль
-
-
-# Типи турів
+# ====================================
+# Типи турів / Tour Types
+# ====================================
 tourType.HEALTH=Оздоровчий
 tourType.SPORTS=Спортивний
 tourType.LEISURE=Відпочинковий
@@ -108,8 +153,14 @@ tourType.WINE=Винний
 tourType.ECO=Екологічний
 tourType.ADVENTURE=Пригодницький
 tourType.CULTURAL=Культурний
+tourType.EXCURSION=Екскурсія
+voucher.tourType=Тип туру
+voucher.tourType.BEACH=Пляжний
+voucher.tourType.MOUNTAINS=Гірський
 
-# Типи трансферів
+# ====================================
+# Типи трансферів / Transfer Types
+# ====================================
 transferType.BUS=Автобус
 transferType.TRAIN=Поїзд
 transferType.PLANE=Літак
@@ -118,15 +169,28 @@ transferType.PRIVATE_CAR=Приватне авто
 transferType.JEEPS=Джип
 transferType.MINIBUS=Мікроавтобус
 transferType.ELECTRICAL_CARS=Електроавтомобілі
+transferType.CAR=Автомобіль
+voucher.transferType=Тип трансферу
+voucher.transferType.BUS=Автобус
+voucher.transferType.PLANE=Літак
 
-# Типи готелів
+# ====================================
+# Типи готелів / Hotel Types
+# ====================================
 hotelType.ONE_STAR=Однозірковий
 hotelType.TWO_STARS=Двозірковий
 hotelType.THREE_STARS=Трьохзірковий
 hotelType.FOUR_STARS=Чотиризірковий
 hotelType.FIVE_STARS=П'ятизірковий
+hotelType.STANDARD=Стандарт
+hotelType.LUXURY=Лакшері
+voucher.hotelType=Тип готелю
+voucher.hotelType.STANDARD=Стандарт
+voucher.hotelType.DELUXE=Делюкс
 
-# Фільтр ваучерів
+# ====================================
+# Фільтр ваучерів / Voucher Filter
+# ====================================
 voucher.filter.header=Фільтр ваучерів
 voucher.filter.tourType=Тип туру
 voucher.filter.transferType=Тип трансферу
@@ -135,8 +199,10 @@ voucher.filter.maxPrice=Максимальна ціна
 voucher.filter.hotelType=Тип готелю
 voucher.filter.all=Усі
 voucher.filter.button=Фільтрувати
-date.format=uk=dd.MM.yyyy
-# Профіль
+
+# ====================================
+# Профіль / Profile
+# ====================================
 profile.title=Мій профіль
 profile.header=Мій профіль
 profile.username=Логін
@@ -152,11 +218,18 @@ profile.table.balance=Баланс
 profile.edit.header=Редагування даних
 profile.firstName=Ім'я
 profile.lastName=Прізвище
+
+# ====================================
+# Баланс / Balance
+# ====================================
 profile.topup.header=Поповнити баланс
 profile.topup.placeholder=Введіть суму
 profile.topup.button=Поповнити
 currency.usd=USD
-# Замовлення
+
+# ====================================
+# Замовлення / Orders
+# ====================================
 profile.orders.header=Мої замовлення
 profile.orders.id=ID замовлення
 profile.orders.voucherTitle=Ваучер
@@ -173,57 +246,47 @@ order.status.confirmed=Підтверджено
 order.status.canceled=Скасовано
 order.totalPrice=Загальна сума
 order.payment=Оплата
-button.edit=Редагувати
-button.delete=Видалити
-# Валідація та форма
-username.label=Логін
-email.label=Електронна пошта
-password.label=Пароль
-password.confirm.label=Підтвердіть пароль
-role.label=Роль
-role.user=Користувач
-role.manager=Менеджер
-role.admin=Адміністратор
-phonenumber.label=Номер телефону
-phone.required=Номер телефону є обов’язковим.
-phone.invalid=Невірний формат номеру телефону.
-tourType.EXCURSION=Екскурсія
-transferType.CAR=Автомобіль
-hotelType.STANDARD=Стандарт
-hotelType.LUXURY=Лакшері
-voucher.status.ACTIVE=Active
-voucher.status.INACTIVE=Неактивно
-voucher.status.SOLD_OUT=Розпродано
-voucher.description=Опис
-voucher.tourType=Тип туру
-voucher.transferType=Тип трансферу
-voucher.hotelType=Тип готелю
-button.save=Save
+
+# ====================================
+# Панель менеджера / Manager Panel
+# ====================================
+manager.title=Панель менеджера
+manager.header=Панель керування ваучерами
+manager.subheader=Змінюйте статус та акційні мітки ваучерів
+manager.table.header=Усі ваучери
+
+# ====================================
+# Панель адміністратора / Admin Panel
+# ====================================
+admin.title=Панель адміна
+admin.header=Керування ваучерами (Admin)
+admin.subheader=Адмін
+admin.table.header=Усі ваучери
+
+# ====================================
+# Користувачі (адмін) / Admin – User Management
+# ====================================
+admin.users.header=Керування користувачами
+admin.users.username=Логін
+admin.users.roles=Ролі
+admin.users.status=Статус
+admin.users.block=Заблокувати
+admin.users.unblock=Розблокувати
+admin.users.blocked=Заблоковано
+admin.users.active=Активний
+admin.users.actions=Дії
+admin.users.changeRole=Змінити
+admin.users.changeRoleHeader=Змінити роль
+
+# ====================================
+# Адмін – Ваучери
+# ====================================
 admin.voucher.edit.title=Редагувати ваучер
 admin.voucher.edit.header=Редагувати ваучер
+admin.voucher.create.title=Створити ваучер
+admin.voucher.create.header=Створити ваучер
 
-# Бізнес-валидація
-username.exists=Логін вже зайнятий.
-email.exists=Електронна пошта вже використовується.
-password.mismatch=Паролі не співпадають.
-phone.exists=Номер телефону вже використовується.
-
-# Ролі
-role.USER=Користувач
-role.MANAGER=Менеджер
-role.ADMIN=Адмін
-
-status.REGISTERED=Зареєстровано
-status.PAID=Оплачено
-status.CANCELED=Скасовано
-
-# Сторінки помилок
-error.404.title=Сторінку не знайдено
-error.404.message=На жаль, запитана сторінка не існує або була переміщена.
-error.403.title=Доступ заборонено
-error.403.message=У вас немає дозволу для перегляду цієї сторінки.
-error.500.title=Внутрішня помилка сервера
-error.500.message=Щось пішло не так на нашому сервері.
-error.default.title=Помилка
-error.default.message=Сталася несподівана помилка. Будь ласка, спробуйте пізніше.
-error.default.backHome=Повернутись на головну
+# ====================================
+# Дата / Date Formatting
+# ====================================
+date.format=uk=dd.MM.yyyy
