All controller test`s +

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -47,7 +47,6 @@ button.submit=Submit
 button.register=Register
 button.home=Home
 button.updateProfile=Update Profile
-button.topup=Top Up
 button.save=Save
 button.edit=Edit
 button.delete=Delete
@@ -229,6 +228,7 @@ profile.table.balance=Balance
 profile.edit.header=Edit Your Details
 profile.firstName=First Name
 profile.lastName=Last Name
+profile.topup.button=Top Up
 
 # ====================================
 # Balance Top-up
