password reset / forgot / html

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -60,6 +60,8 @@ sign.in.title=Sign In
 sign.in.header=Sign In
 sign.up.title=Sign Up
 sign.up.header=Sign Up
+link.forgotPassword=Forgot password?
+link.resetPassword=Reset password
 
 # ====================================
 # Form Labels & Validation
@@ -310,3 +312,4 @@ currency.usd=USD
 status.REGISTERED=Registered
 status.PAID=Paid
 status.CANCELED=Canceled
+
