--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -60,6 +60,8 @@ sign.in.title=Авторизація
 sign.in.header=Авторизація
 sign.up.title=Реєстрація
 sign.up.header=Реєстрація
+link.forgotPassword=Забули пароль?
+link.resetPassword=Відновити пароль
 
 # ====================================
 # Валідація та форма / Form Labels & Validation
